kubernetes/apps/development/alphaos/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alphaos
  namespace: development
  labels:
    app.kubernetes.io/name: alphaos
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8503
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: alphaos
    app.kubernetes.io/component: app
